--- a/templates/repository/repoList.html
+++ b/templates/repository/repoList.html
@@ -15,11 +15,11 @@
         <div class="row">
           <div class="media-repo" *ngFor="let item of orgRepo; let i = index">
             <p class="col-xs-3 repo-left">
-              <span [ngClass]="(i+1)%2==0? 'bg-orange' : 'bg-blue'">{{item.name}}</span><br/>
+              <span [ngClass]="(i+1)%2==0? 'bg-orange' : 'bg-blue'" (click)="seeAllRepo(item)">{{item.name}}</span><br/>
               <span>{{item.bio}}</span>
             </p>
             <div class="col-xs-9 repo-body">
-              <a href="javascript:void(0)" *ngFor="let repo of item.children">
+              <a href="javascript:void(0)" *ngFor="let repo of item.children" (click)="repoDetail(repo)">
                 <h3>{{repo.namespace}}/{{repo.repository}}</h3>
                 <h5 class="col-gray">{{repo.description}}</h5>
                 <p class="star-fork">
@@ -33,53 +33,6 @@
       </div>
     </div>
   </div>
-  <!-- <div id="allRepo">
-    <div class="row">
-      <div class="col-xs-12 col-md-10 col-md-offset-1">
-        <div class="row pad-no">
-          <div class="col-xs-5 col-md-3 org-name">Org name</div>
-          <div class="col-xs-6 col-xs-offset-1 col-md-5 col-md-offset-4 pad-rt-no">
-            <p class="filter-repo">
-              <input type="text" placeHolder="search repository"/>
-              <i class="fa fa-search filter"></i>
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 repo-body">
-            <a href="javascript:void(0)">
-              <h3>small/gsgsg</h3>
-              <h5 class="col-gray">this is desc</h5>
-              <p class="star-fork">
-                <i class="fa fa-star col-orange"></i> 200 
-              </p>
-            </a>
-            <a href="javascript:void(0)">
-              <h3>small/gsgsg</h3>
-              <h5 class="col-gray">this is desc</h5>
-              <p class="star-fork">
-                <i class="fa fa-star col-orange"></i> 200 
-              </p>
-            </a>
-            <a href="javascript:void(0)">
-              <h3>small/gsgsg</h3>
-              <h5 class="col-gray">this is desc</h5>
-              <p class="star-fork">
-                <i class="fa fa-star col-orange"></i> 200 
-              </p>
-            </a>
-            <a href="javascript:void(0)">
-              <h3>small/gsgsg</h3>
-              <h5 class="col-gray">this is desc</h5>
-              <p class="star-fork">
-                <i class="fa fa-star col-orange"></i> 200 
-              </p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
  
  
