--- a/less/color.less
+++ b/less/color.less
@@ -1,5 +1,6 @@
 @black: #191919;
 @menuBlack: #000611; // 0 6 17
+@insetBlack: #b4b3b3; // 180 179 179
 
 @white: #fff;
 @headerWhite: @white;
@@ -10,7 +11,6 @@
 
 @brownness: #c9caaa;
 
-// @orange: #ff5400;
 @blue: lightblue;
 
 @gray:  #DFDFDF;
@@ -37,6 +37,8 @@
 @userEmailGray: #D3D3D3; //211 211 211
 @userNavGray: #CCCCCC; // 204 204 204
 @teamGray: #687C8A; // 104 124 138
+@createGray: #C0C0C0; // 192 192 192
+
 
 
 @baseBlue: #3DA1E5; // 61 161 229
