--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -1,32 +1,26 @@
 <div class="container-fluid" id="access">
   <div class="header">
     <img src="img/banner.jpg"/>
-    <span class="title">Sign in the container repository</span>
+    <span class="title">Sign up for Dockyard</span>
   </div>
   <div class="content">
     <div class="login-content">
-      <div class="login">
+      <div class="sign-up">
         <span class="space user">
-          <input type="text" placeholder="Username or Email" [(ngModel)]="user.username" name="username" autocomplete="off">
+          <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" autocomplete="off">
           <i class="fa fa-user"></i>
+        </span>
+        <span class="space user">
+          <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off">
+          <i class="fa fa-envelope"></i>
         </span>
         <span class="space pwd">
           <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
           <i class="fa fa-lock"></i>
         </span>
-        <button class="space sign-in" (click)="login()">Sign in</button>
-        <a href="javascript:void(0)" class="forget-pwd" (click)="changeNav('forgetPassword')">Forgot your password ?</a>
-        <div class="space">
-          <span class="pull-left google">
-            Sign in with <i class="fa fa-glide-g mar-lt-five"></i>
-          </span>
-          <span class="pull-right github">
-            Sign in with <i class="fa fa-github mar-lt-five"></i>
-          </span>
-        </div>
+        <button class="space sign-in" (click)="signUp()">Sign Up</button>
       </div>
     </div>
-  </div>
   <div class="row footer">
     <div class="row">
       <div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -50,8 +44,8 @@
       <a href="javascript:void(0)" class="space" (click)="changeNav('browse')">Browse</a>
       <a href="javascript:void(0)" class="space tutorial">Tutorial</a>
       <a href="javascript:void(0)" class="space docs">Docs</a>
-      <a href="javascript:void(0)" class="space active" (click)="changeNav('login')">Login</a>
-      <a href="javascript:void(0)" class="space" (click)="changeNav('register')">Sign Up</a>
+      <a href="javascript:void(0)" class="space" (click)="changeNav('login')">Login</a>
+      <a href="javascript:void(0)" class="space active" (click)="changeNav('register')">Sign Up</a>
       <a href="javascript:void(0)" class="space-remain">.</a>
     </div>
   </div>
