--- a/templates/repository/repoCreate.html
+++ b/templates/repository/repoCreate.html
@@ -25,14 +25,14 @@
           </li>
         </ul>
         <div class="col-xs-6 info">
-          <p class="mar-bt-twenty-five clear-gap">
+          <p class="mar-bt-twenty clear-gap">
             <select [(ngModel)]="repo.username" name="username" (focus)="changeStep(1)">
               <option value="1">dockyard</option>
               <option value="2">surface</option>
             </select>
             <input type="text" placeholder="name"  (focus)="changeStep(2)" [(ngModel)]="repo.repository" name="repository"/>
           </p>
-          <p class="mar-bt-twenty-five">
+          <p class="mar-bt-twenty">
             <input type="text" placeholder="short descript"  (focus)="changeStep(3)" [(ngModel)]="repo.short" name="short"/>
           </p>
           <textarea placeholder="full descript" (focus)="changeStep(4)" [(ngModel)]="repo.description" name="description"></textarea>
