--- a/templates/repository/repoDetail.html
+++ b/templates/repository/repoDetail.html
@@ -1,7 +1,7 @@
 <div id="repoDetail">
   <div class="header container">
       <div class="repo-name">Private Repository</div>
-      <div class="repo-user">Lyy/123456 <span class="fa fa-star"></span></div>
+      <div class="repo-user">{{repoInfo.repoName}} <span class="fa fa-star"></span></div>
       <div class="repo-status">Last pushed: Never</div>
   </div>
   <div class="repo-nav">
