--- a/templates/repository/repositories.html
+++ b/templates/repository/repositories.html
@@ -1,9 +1,9 @@
-<div id="repoContent">
+<div id="repoContent" class="bg-outLetGray">
   <div id="allRepo">
     <div class="row">
       <div class="col-xs-12 col-md-10 col-md-offset-1">
         <div class="row pad-no">
-          <div class="col-xs-5 col-md-3 org-name">Org name</div>
+          <div class="col-xs-5 col-md-3 org-name">{{orgInfo.orgName}}</div>
           <div class="col-xs-6 col-xs-offset-1 col-md-5 col-md-offset-4 pad-rt-no">
             <p class="filter-repo">
               <input type="text" placeHolder="search repository"/>
