--- a/less/app.less
+++ b/less/app.less
@@ -52,6 +52,10 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	color: @brownness;
 }
 
+.bg-outLetGray {
+	background: @outLetGray;
+}
+
 .mar-tp-no {
 	margin-top: 0;
 }
@@ -98,6 +102,14 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	margin-top: 20px;
 }
 
+.mar-bt-twenty {
+	margin-bottom: 20px;
+}
+
+.mar-lt-twenty {
+	margin-left: 20px;
+}
+
 .mar-bt-twenty-five {
 	margin-bottom: 25px;
 }
@@ -112,6 +124,19 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 
 .pad-rt-no {
 	padding-right: 0;
+}
+
+.pad-lr-twelve {
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+.pad-lt-twenty {
+	padding-left: 20px;
+}
+
+.pad-bt-twenty {
+	padding-bottom: 20px;
 }
 
 .over-hidden {
@@ -140,7 +165,7 @@ html {
 
 body {
 	font-size: @baseSize;
-	background: @bodyGray;
+	// background: @bodyGray;
 	color: @black;
 	// font-family: Microsoft YaHei;
 }
@@ -148,8 +173,10 @@ body {
 #repoContent {
 	background: @outLetGray;
 	width: 100%;
-	height: 100%;
+	height: e("calc(100% - 44px)");
+	height: e("-webkit-calc(100% - 44px)");
 }
+
 /* index start */
 #header {
 	overflow: hidden;
@@ -185,7 +212,7 @@ body {
 
 .content-one {
 	overflow: hidden;
-	background: @white;
+	background: @bodyGray;
 	padding: 40px;
 }
 
@@ -210,18 +237,21 @@ body {
 }
 
 .content-two {
-	background: lightblue;
-	padding: 40px 0;
-	font-size: 0;
+	padding: 40px 0 40px;
+	font-size: @baseSize;
 	color: @white;
+	background: linear-gradient(0, #28529d, #127bd3);
+	background: -webkit-linear-gradient(0, #28529d, #127bd3);
+}
+
+.content-two .title {
+	font-size: @middleSize;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .content-two .space {
-	display: inline-block;
-	font-size: @baseSize;
-	vertical-align: bottom;
-	width: 80%;
-	margin-left: 10%;
+	text-align: justify;
 }
 
 .content-two .font-big { 
@@ -229,28 +259,24 @@ body {
 }
 
 .surface-carousel {
-	width: e("calc(100% - 200px)");
-	width: e("-webkit-calc(100% - 200px)");
+	width: 100%;
 	height: 250px;
 	border: 1px solid @gray;
 }
 
 .content-three {
-	background: @white;
-	padding: 40px 0;
+	padding: 80px 0 110px;
+	background: @bodyGray;
 }
 
 .content-three .space {
-	width: 75%;
-	margin: 0 auto;
+	height: 220px;
 }
 
-.content-three img {
-	width: e("calc((75% - 120px) / 3 )");
-	width: e("-webkit-calc((75% - 120px) / 3 )");
-	height: 200px;
-	margin-left: 30px;
-	border: 1px solid #b3b3b3;
+.content-three .space img {
+	width: 100%;
+	height: auto;
+	max-height: 100%;
 }
 
 #footer {
@@ -297,8 +323,10 @@ body {
 }
 
 #nav .menu img {
-	width: 50px;
-	height: 100%;
+	width: 33px;
+	height: auto;
+	margin-top: 5px;
+	max-height: 35px;
 }
 
 #nav .user {
@@ -370,7 +398,7 @@ body {
 
 #createRepo, #userSetting {
 	width: 200px;
-	background: @menuGray;
+	background: @createGray;
 	position: absolute;
 	top: 44px;
 	right: 0px;
@@ -485,6 +513,7 @@ body {
 	height: 44px;
 	line-height: 44px;
 	font-size: @baseSize;
+	padding-left: 12px;
 }
 #nav i {
 	margin: 0 5px 0 10px;
@@ -542,14 +571,14 @@ body {
 #repoList .repo-left span {
 	display: inline-block;
 	width: 100%;
-	padding: 12px 20px;
+	padding: 16px 20px;
 	text-overflow: ellipsis;
 	font-size: @baseSize;
 	color: @black;
 }
 
 #repoList .repo-left span:first-child {
-	font-size: @smallSize;
+	font-size: @smallSize+0.2;
 	cursor: pointer;
 	color: @white;
 }
@@ -594,14 +623,14 @@ body {
 }
 
 #repoList .repo-body h5 {
-	font-size: 16px;
+	font-size: @baseSize;
 	height: 36px;
 	overflow: hidden;
-	color: @repoFontGray;
+	color: @orgFontGray;
 }
 
 #repoList .star-fork {
-	font-size: 20px;
+	font-size: @middleSize;
 	margin-top: @baseMargin+50px;
 	margin-bottom: 0;
 	position: relative;
@@ -621,6 +650,8 @@ body {
 
 #allRepo {
 	padding-top: 40px;
+	padding-bottom: 20px;
+	background: @outLetGray;
 }
 
 #allRepo .repo-body {
@@ -659,7 +690,7 @@ body {
 	font-size: 16px;
 	height: 36px;
 	overflow: hidden;
-	color: @repoFontGray;
+	color: @orgFontGray;
 }
 
 #allRepo .star-fork {
@@ -677,7 +708,8 @@ body {
 	height: 40px;
 	line-height: 40px;
 	color: @orgNumBlue;
-	font-size: @smallSize;
+	font-size: @smallSize+0.2;
+	padding-left: 12px;
 }
 
 #allRepo .star-fork i.fa-info-circle {
@@ -708,6 +740,7 @@ body {
 	top: 4px;
 	padding: 5px;
 	cursor: pointer;
+	font-size: @smallSize+0.2;
 }
 
 @media screen and (max-width: 640px) {
@@ -736,7 +769,8 @@ body {
 /* repo create start */
 #newRepoContent {
 	width: 100%;
-	height: 100%;
+	height: e("calc(100% - 44px)");
+	height: e("-webkit-calc(100% - 44px)");
 	background: @repoNewGray;
 }
 #newRepo {
@@ -750,8 +784,8 @@ body {
 #newRepo li {
 	height: auto;
 	width: 100%;
-	padding-bottom: 50px;
-	border-left: 2px dashed @repoStepGray;
+	padding-bottom: 65px;
+	border-left: 1px dashed @repoStepGray;
 }
 
 
@@ -802,6 +836,7 @@ body {
 	font-size: @baseSize;
 	background: @repoFormGray;
 	border-radius: 5px;
+	box-shadow: 1px 1px 1px @insetBlack inset;
 }
 
 #newRepo input::-webkit-input-placeholder, 
@@ -816,7 +851,7 @@ body {
 }
 
 #newRepo .visible-type {
-	margin: @baseMargin+5px auto @baseMargin+15px;
+	margin: @baseMargin+3px auto;
 	font-size: 16px;
 	padding-left: 10px;
 }
@@ -837,6 +872,8 @@ body {
 	height: 18px;
 	position: relative;
 	top: 5px;
+	margin-top: 5px;
+	box-shadow: none;
 }
 
 #newRepo .visible-type input:active, #newRepo .visible-type input:focus {
@@ -880,9 +917,6 @@ body {
 	background: @baseBlue;
 }
 
-#newRepo .btn-create:hover {
-	background: @blue;
-}
 /* repo create end */
 
 /* repo detail start */ 
@@ -1078,12 +1112,18 @@ body {
 /* repo detail end */ 
 
 /* org list start */
-#orgList {
-	margin-top: @baseMargin+40px;
-}
 
 #orgList, #repoList {
 	padding-top: @baseMargin+30px;
+	padding-bottom: @baseMargin+30px;
+	width: 100%;
+	height: e("calc(100% - 44px)");
+	height: e("-webkit-calc(100% - 44px)");
+	background: @outLetGray;
+}
+
+#repoList {
+	height: auto;
 }
 
 #orgList .title, #repoList .title {
@@ -1095,23 +1135,23 @@ body {
 	background: @baseBlue;
 	color: @white;
 	padding: 10px 20px;
-	border-radius: 3px;
+	border-radius: @middleRadius;
 	font-size: @smallSize;
 }
 
-#orgList .title button:hover, 
-#orgList .title button:focus, 
-#orgList .title button:active,
-#repoList .title button:hover, 
-#repoList .title button:focus, 
-#repoList .title button:active {
-	color: @white;
-	background: @blue;
-}
+// #orgList .title button:hover, 
+// #orgList .title button:focus, 
+// #orgList .title button:active,
+// #repoList .title button:hover, 
+// #repoList .title button:focus, 
+// #repoList .title button:active {
+// 	color: @white;
+// 	background: @blue;
+// }
 
 #orgList .media-org {
 	background: @browseWhite;
-	margin-top: @baseMargin+30px;
+	margin-top: @baseMargin+14px;
 	width: 100%;
 	padding: 10px 0;
 	height: 200px;
@@ -1155,9 +1195,9 @@ body {
 	width: 60px;
 	height: 60px;
 	max-width: 100%;
-	background: #eaeaea;
-	border-radius: 5px;
-	padding: 10px;
+	// background: #eaeaea;
+	// border-radius: 5px;
+	// padding: 10px;
 }
 
 #orgList .org-left span {
@@ -1175,7 +1215,8 @@ body {
 /* org create start */
 #newOrgContent {
 	width: 100%;
-	height: 100%;
+	height: e("calc(100% - 44px)");
+	height: e("-webkit-calc(100% - 44px)");
 	background: @orgNewGray;
 }
 #createOrg {
@@ -1185,7 +1226,7 @@ body {
 }
 
 #createOrg .guide {
-	font-size: 16px;
+	font-size: @smallSize;
 	color: @orgStepFontGray;
 }
 
@@ -1219,7 +1260,7 @@ body {
 	height: 40px;
 	line-height: 40px;
 	border-radius: 5px;
-	font-size: 16px;
+	font-size: @smallSize;
 	text-align: center;
 	color: @white;
 	background: @orgStepGray;
@@ -1244,11 +1285,12 @@ body {
 	width: 100%;
 	height: 40px;
 	line-height: 40px;
-	margin: 12px 0;
+	margin-top: 20px;
 	padding: 0 12px;
 	font-size: @baseSize;
 	border-radius: 5px;
 	background: @orgFormGray;
+	box-shadow: 1px 1px 1px @insetBlack inset;
 }
 
 #createOrg .first-step .save,
@@ -1257,6 +1299,7 @@ body {
 	color: #fff;
 	background: @orgStepGray;
 	font-size: @smallSize;
+	box-shadow: none;
 }
 
 #createOrg .first-step .create, 
@@ -1317,10 +1360,17 @@ body {
 	border: none;
 }
 
+#createOrg .members li i {
+	color: @orange;
+}
+
 #createOrg .teams li:hover,
 #createOrg .members li:hover {
 	background: @teamGray;
 	color: #fff;
+	i {
+		color: #fff;
+	}
 }
 
 #createOrg .teams li i,
@@ -1345,7 +1395,7 @@ body {
 #createOrg .members .title .add {
 	width: 20%;
 	float: left;
-	padding: 9px 0 8px;
+	padding: 10px 0;
 	text-align: center;
 	background: @repoOrange;
 	border-radius: 0 5px 5px 0;
@@ -1354,7 +1404,7 @@ body {
 }
 
 #createOrg .to-repo {
-	padding: 6px 12px;
+	padding: 9px 15px;
 	border-radius: 5px;
 	background: @baseBlue;
 	color: #fff;
@@ -1366,12 +1416,13 @@ body {
 /* user setting */
 #userEdit {
 	width: 100%;
-	height: 100%;
+	height: e("calc(100% - 44px)");
+	height: e("-webkit-calc(100% - 44px)");
 	background: @outLetGray;
 }
 
 #userSet {
-	padding-top: 40px;
+	// padding-top: 40px;
 }
 
 #userSet h4 {
@@ -1387,9 +1438,8 @@ body {
 }
 
 #userSet .title {
-	height: 44px;
-	line-height: 44px;
-	margin-bottom: 20px;
+	height: 80px;
+	line-height: 80px;
 	font-size: 16px;
 }
 
@@ -1415,7 +1465,7 @@ body {
 	display: block;
 	border: none;
 	background: none;
-	font-size: @baseSize;
+	font-size: @smallSize;
 }
 
 #userSet .user-nav>li.active, 
@@ -1559,6 +1609,11 @@ body {
 	border-radius: 5px;
 }
 
+#userInfo .text {
+	padding-left: 0;
+	padding-right: 37px;
+}
+
 #userSet .new-pwd {
 	background: @outLetGray;
 	padding: 30px 0;
@@ -1570,23 +1625,77 @@ body {
 /* user end */
 
 /* sign in & sign up start */
-#access {
+#access, #app {
 	width: 100%;
 	height: 100%;
-	background: @white;
+}
+
+#access {
+	overflow-y: hidden;
+}
+
+#access .content {
+	background: @repoNewGray;
+	width: 100%;
+	height: e("calc(100% - 190px)");
+	height: e("-webkit-calc(100% - 190px)");
 }
 
 #access .header {
 	text-align: center;
+	position: relative;
 }
 
 #access .header img {
+	width: 100%;
+	height: 180px;
+}
+
+#access .header .title {
+	position: absolute;
+	display: block;
+	bottom: 38px;
+	font-size: @bigPlusSize;
+	color: @white;
+	width: 100%;
+	text-align: center;
+	display: block;
+}
+
+#access .group-content {
+	position: relative;
+	height: 100%;
+}
+
+#access .group-content .contact {
+	position: absolute;
+	width: 100%;
+	top: e("calc((100% - 300px) / 2)");
+	top: e("-webkit-calc((100% - 300px) / 2)");
+}
+
+@media screen and (max-width: 992px) {
+	#access .group-content .contact {
+		top: e("calc((100% - 450px) / 2)");
+		top: e("-webkit-calc((100% - 450px) / 2)");
+	} 
+}
+
+#access .header .title.contact {
+	bottom: 28px;
+}
+
+#access .header .title .help {
+	font-size: @smallSize;
+	font-weight: normal;
+}
+
+#app .header img {
 	width: 100%;
 	height: auto;
 }
 
 #access .header .text {
-	display: block;
 	position: relative;
 	bottom: 80px;
 	font-size: @bigPlusSize;
@@ -1594,39 +1703,77 @@ body {
 	color: @white;
 }
 
-#access .footer {
+#access .footer, 
+#app .footer {
 	width: 100%;
 	background: @footerGray;
 	position: fixed;
 	bottom: 0;
 }
 
-#access .footer .intro, #access .footer .team {
+#access .footer .intro, 
+#access .footer .team,
+#app .footer .intro, 
+#app .footer .team {
 	display: inline-block;
 	margin-bottom: 0;
 	padding: 12px 0;
 	text-align: center;
 }
 
-#access .footer .intro {
+#access .footer .intro,
+#app .footer .intro {
+	text-align: left;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+#access .footer .team,
+#app .footer .team {
+	text-align: right;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+@media screen and (max-width: 1024px) {
+	#access .footer .intro,
+	#access .footer .team,
+	#app .footer .intro,
+	#app .footer .team {
+		text-align: left;
+	}
+}
+
+#access .footer .intro,
+#app .footer .intro {
 	color: @gray;
 }
 
-#access .footer .team {
+#access .footer .team,
+#app .footer .team {
 	color: @white;
+	padding-left: 10px;
 }
 
-#access .footer .team .space {
+#access .footer .team .space,
+#app .footer .team .space {
 	padding: 5px;
 	cursor: pointer;
 }
 
-#access .footer .team .space:hover {
+#access .footer .team .space:hover,
+#app .footer .team .space:hover {
 	color: @yellow;
 }
 
-#access .footer .team .active {
+#access .footer .team .active,
+#app .footer .team .active {
 	color: @yellow;
+}
+
+#access .browse {
+	padding-top: 40px;
+	height: 100%;
 }
 
 #access .nav {
@@ -1658,15 +1805,16 @@ body {
 
 #access .login-content {
 	width: 300px;
-	margin: 100px auto;
+	margin: 0 auto;
+	padding-top: 150px;
 }
 
 #access .login .space, #access .sign-up .space {
 	display: block;
 	width: 100%;
-	height: 44px;
+	height: 40px;
 	margin-bottom: 20px;
-	border-radius: 5px;
+	border-radius: @smallRadius;
 	font-size: @baseSize;
 	position: relative;
 }
@@ -1677,8 +1825,9 @@ body {
 	padding: 0 32px 0 12px;
 	border-radius: 5px;
 	background: @gray;
-	color: #b3b3b3;
+	color: @black;
 	font-size: @baseSize;
+	box-shadow: 1px 1px 1px @insetBlack inset;
 }
 
 #access .login .space > i, #access .sign-up .space > i {
@@ -1686,7 +1835,7 @@ body {
 	right: 9px;
 	top: 12px;
 	color: @iconGray;
-	font-size: @baseSize;
+	font-size: @smallSize;
 }
 #access .login .user, #access .login .pwd, #access .login .user input:focus, #access .login .pwd input:focus,
 #access .sign-up .user, #access .sign-up .pwd, #access .sign-up .user input:focus, #access .sign-up .pwd input:focus {
@@ -1731,35 +1880,37 @@ body {
 	font-size: @baseSize;
 }
 
-#access .navbar {
+#access .navbar, #app .navbar {
 	width: 100%;
 	margin: 0 auto;
 	position: fixed;
 	top: 0;
-	height: 40px;
-	line-height: 40px;
+	height: 44px;
+	line-height: 44px;
 }
 
-#access .logo {
+#access .logo, #app .logo {
 	width: 35%;
 	float: left;
 	text-align: center;
 	background: @headerWhite;
 	opacity: 0.75;
+	height: 44px;
 }
 
-#access .menu {
+#access .menu, #app .menu {
 	width: 65%;
 	float: left;
 }
 
-#access .logo img {
-	width: 40px;
+#access .logo img, #app .logo img {
+	width: 100px;
 	height: auto;
-	max-height: 40px;
+	max-height: 36px;
+	margin-top: 5px;
 }
 
-#access .menu .space {
+#access .menu .space, #app .menu .space {
 	width: 15%;
 	background: @headerWhite;
 	opacity: 0.75;
@@ -1768,17 +1919,22 @@ body {
 	text-align: center;
 }
 
-#access .menu .space:hover, #access .menu .space:active {
+#access .menu .space:hover, 
+#access .menu .space:active,
+#app .menu .space:hover, 
+#app .menu .space:active {
 	background: none;
 	color: #fff;
 }
 
-#access .menu .space.active {
+#access .menu .space.active,
+#app .menu .space.active {
 	background: none;
 	color: #fff;
 }
 
-#access .menu .space-remain {
+#access .menu .space-remain,
+#app .menu .space-remain {
 	width: 25%;
 	float: left;
 	background: @headerWhite;
@@ -1786,45 +1942,90 @@ body {
 	color: #fff;
 }
 
-@media screen and (max-width: 640px) { 
-	#access .logo {
+@media screen and (max-width: 980px) { 
+	#access .logo, #app .logo {
 		width: 30%;
 	}
-	#access .menu {
+	#access .menu, #app .menu {
 		width: 70%;
 	}
-	#access .menu .space {
+	#access .header .text, #app .header .text {
+		bottom: 30px;
+	}
+	#access .menu .space-remain, 
+	#app .menu .space-remain {
+		display: none;
+	}
+	#access .menu .space, #app .menu .space {
 		width: 20%;
 	}
-	#access .menu .space-remain {
+}
+
+@media screen and (max-width: 640px) { 
+	#access .logo, #app .logo {
+		width: 30%;
+	}
+	#access .menu, #app .menu {
+		width: 70%;
+	}
+	#access .menu .space, #app .menu .space {
+		width: 20%;
+	}
+	#access .menu .space-remain, 
+	#app .menu .space-remain {
 		width: 0;
 	}
-	#access .header .text {
+	#access .header .text,
+	#app .header .text {
 		bottom: 10px;
 	}
 }
 
-@media screen and (max-width: 980px) { 
-	#access .logo {
-		width: 30%;
-	}
-	#access .menu {
-		width: 70%;
-	}
-	#access .header .text {
-		bottom: 30px;
-	}
-}
-
 @media screen and (max-width: 625px){
-	#access .logo {
-		width: 20%;
+	#access .logo, #app .logo {
+		width: 40%;
 	}
-	#access .menu {
-		width: 80%;
+	#access .menu, #app .menu {
+		width: 60%;
 	}
-	#access .header .text {
+	#access .header, 
+	#access .menu .tutorial, 
+	#access .menu .docs,
+	#app .header, 
+	#app .menu .tutorial, 
+	#app .menu .docs {
+		display: none;
+	}
+	#access .header .text,
+	#app .header .text {
 		bottom: 5px;
+	}
+	#access .menu .space,
+	#app .menu .space {
+		opacity: 1;
+	}
+	#access .logo, #app .logo {
+		opacity: 1;
+	}
+	#access .menu .space.active,
+	#app .menu .space.active {
+		color: @signBlue;
+	}
+	#access .menu .space:hover,
+	#app .menu .space:hover {
+		color: @signBlue;
+	}
+	#access .menu .space, #app .menu .space {
+		width: 33.3%;
+	}
+	#access .login-content {
+		padding-top: 250px;
+	}
+	#access .content {
+		height: 100%;
+	}
+	#access .browse {
+		padding-top: 80px;
 	}
 }
 
@@ -1841,6 +2042,10 @@ body {
 	background: @browseWhite;
 	padding: 26px 0;
 	text-align: center;
+}
+
+#access .browse .info li i {
+	font-size: @middleSize;
 }
 
 #access .browse .space:hover {
@@ -1860,13 +2065,13 @@ body {
 #access .browse .info .star, 
 #access .browse .info .download {
 	width: 20%;
-	padding: 33px 0;
+	padding: 32px 0;
 	color: @browseIconGray;
 }
 
 #access .browse .info .detail {
 	width: 17%;
-	padding: 33px 0;
+	padding: 32px 0;
 	background: @browseIconGray;
 	color: #fff;
 }
@@ -1891,23 +2096,18 @@ body {
 
 #access .contact img {
 	margin-bottom: 20px;
-	width: 50%;
-	max-width: 100%;
+	width: 120px;
 }
 
-@media screen and (max-width: 1000px) {
-	#access .contact img {
-		width: 40%;
-	}
+#access.explore {
+	overflow-y: auto;
+	background: @outLetGray;
+	padding-bottom: 88px;
 }
 
-@media screen and (max-width: 625px) {
+@media screen and (max-width: 425px) {
 	#access .contact img {
-		width: 60%;
-	}
-
-	#access .login-content {
-		margin-top: 200px;
+		width: 80px;
 	}
 }
 /* sign in & sign up end */
