--- a/templates/common/forgetPassword.html
+++ b/templates/common/forgetPassword.html
@@ -1,29 +1,19 @@
 <div class="container-fluid" id="access">
   <div class="header">
     <img src="img/banner.jpg"/>
-    <span class="title">Sign in the container repository</span>
+    <span class="title">Retrieve password</span>
   </div>
   <div class="content">
     <div class="login-content">
-      <div class="login">
+      <div class="login forget-pwd">
+        <span class="space">
+          Enter your email address and we will send you a link to reset your password
+        </span>
         <span class="space user">
-          <input type="text" placeholder="Username or Email" [(ngModel)]="user.username" name="username" autocomplete="off">
-          <i class="fa fa-user"></i>
+          <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off">
+          <i class="fa fa-envelope"></i>
         </span>
-        <span class="space pwd">
-          <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
-          <i class="fa fa-lock"></i>
-        </span>
-        <button class="space sign-in" (click)="login()">Sign in</button>
-        <a href="javascript:void(0)" class="forget-pwd" (click)="changeNav('forgetPassword')">Forgot your password ?</a>
-        <div class="space">
-          <span class="pull-left google">
-            Sign in with <i class="fa fa-glide-g mar-lt-five"></i>
-          </span>
-          <span class="pull-right github">
-            Sign in with <i class="fa fa-github mar-lt-five"></i>
-          </span>
-        </div>
+        <button class="space sign-in" (click)="sendEmail()">Send</button>
       </div>
     </div>
   </div>
@@ -50,7 +40,7 @@
       <a href="javascript:void(0)" class="space" (click)="changeNav('browse')">Browse</a>
       <a href="javascript:void(0)" class="space tutorial">Tutorial</a>
       <a href="javascript:void(0)" class="space docs">Docs</a>
-      <a href="javascript:void(0)" class="space active" (click)="changeNav('login')">Login</a>
+      <a href="javascript:void(0)" class="space" (click)="changeNav('login')">Login</a>
       <a href="javascript:void(0)" class="space" (click)="changeNav('register')">Sign Up</a>
       <a href="javascript:void(0)" class="space-remain">.</a>
     </div>
