--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-md-10 col-md-offset-1">
     <div class="row">
       <ul class="col-xs-6 pad-no menu">
-        <li class="logo"><a href="javascript:void(0)" (click)="linkComp('repositories','repo')"><img src="img/opshub_03.png" alt="dockyard"/></a></li>
+        <li class="logo"><a href="javascript:void(0)" (click)="linkComp('repositories','repo')"><img src="img/opshub.png" alt="dockyard"/></a></li>
         <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')" [ngClass]=" active=== 'repo'? 'active' : '' ">Repositories</a></li>
         <li class="org"><a href="javascript:void(0)" (click)="linkComp('organizations','org')" [ngClass]=" active=== 'org'? 'active' : '' ">Organizations</a></li>
       </ul>
