--- a/templates/organization/orgList.html
+++ b/templates/organization/orgList.html
@@ -11,8 +11,8 @@
   </div>
   <div class="row">
     <div class="col-md-10 col-md-offset-1 col-xs-12 pad-no">
-      <div class="row">
-        <div class="col-xs-12 col-md-4" *ngFor="let org of orgList">
+      <div class="row pad-bt-twenty bg-outLetGray">
+        <div class="col-xs-12 col-md-4 pad-lr-twelve" *ngFor="let org of orgList">
           <div class="media-org">
             <a href="javascript:void(0)" class="org-left">
               <img src={{org.gravatar}}/>
