--- a/templates/user/setting.html
+++ b/templates/user/setting.html
@@ -59,7 +59,7 @@
                     Please choose a password which is longer than 6 characters
                   </p>
                 </div>
-                <div class="col-xs-6 text">
+                <div class="col-xs-6">
                   <input type="text" placeholder="Old Password" [(ngModel)]="user['old-password']" name="location"/>
                   <input type="text" placeholder="New Password" [(ngModel)]="user['new-password']" name="password"/>
                   <input type="text" placeholder="Comfirm Password" [(ngModel)]="user['comfirm-password']" name="comfirm"/>
@@ -77,7 +77,7 @@
                     This information will be visible to all users of Docker Hub.
                   </p>
                 </div>
-                <div class="col-xs-6 text">
+                <div class="col-xs-6">
                   <input type="text" placeholder="Name" [(ngModel)]="account.name" name="name"/>
                   <input type="text" placeholder="Company" [(ngModel)]="account.company" name="company"/>
                   <input type="text" placeholder="Gravatar Email" [(ngModel)]="account.email" name="comfirm"/>
