--- a/less/app.less
+++ b/less/app.less
@@ -56,6 +56,10 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	background: @outLetGray;
 }
 
+.bg-bodyGray {
+	background: @bodyGray;
+}
+
 .mar-tp-no {
 	margin-top: 0;
 }
@@ -341,6 +345,10 @@ body {
 	color: @white;
 }
 
+#nav .user > li > a {
+	padding: 0 5px;
+}
+
 #nav .menu .logo, #nav .menu .logo:hover, #nav .menu .logo:active {
 	background: none;
 }
@@ -432,12 +440,6 @@ body {
 	}
 }
 
-@media screen and (max-width: 642px) {
-	#nav .user .create, #nav .user .add {
-		display: none;
-	}
-}
-
 @media screen and (max-width: 700px) {
 	#nav .menu-rt {
 		width: 40%;
@@ -449,6 +451,12 @@ body {
 
 	#nav .menu .logo a {
 		margin-right: 15px;
+	}
+}
+
+@media screen and (max-width: 642px) {
+	#nav .user .create, #nav .user .add {
+		display: none;
 	}
 }
 
@@ -466,29 +474,26 @@ body {
 	}
 
 	#nav .menu .logo a {
-		margin-right: 15px;
+		margin-right: 10px;
 	}
 
 	#nav .menu li a, #nav .user > li > a {
 		padding: 0 6px;
+		margin-right: 0;
 	}
 }
 
 @media screen and (max-width: 480px) {
 	#nav .menu {
-		width: 70%;
+		width: 77%;
 	}
 
 	#nav .menu-rt {
-		width: 30%;
+		width: 23%;
 	}
 
 	#nav .menu li a {
-		padding: 0 12px;
-	}
-
-	#nav .menu .org {
-		display: none;
+		padding: 0 7px;
 	}
 }
 
@@ -775,6 +780,8 @@ body {
 }
 #newRepo {
 	padding-top: @baseMargin+50px;
+	background: @bodyGray;
+	padding-bottom: 20px;
 }
 
 #newRepo .guide {
@@ -1273,7 +1280,7 @@ body {
 }
 
 #createOrg .create {
-	margin: 60px auto 0;
+	margin: 60px auto 20px;
 }
 
 #createOrg .first-step input, 
@@ -1612,6 +1619,13 @@ body {
 #userInfo .text {
 	padding-left: 0;
 	padding-right: 37px;
+}
+
+@media screen and (max-width: 768px) {
+	#userInfo .text {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 }
 
 #userSet .new-pwd {
