--- a/templates/organization/orgCreate.html
+++ b/templates/organization/orgCreate.html
@@ -1,5 +1,5 @@
 <div id="newOrgContent">
-  <div class="row">
+  <div class="row bg-bodyGray">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div id="createOrg">
         <div class="row">
