--- a/templates/repository/repoDetail.html
+++ b/templates/repository/repoDetail.html
@@ -66,7 +66,7 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>Text</th>
+              <th>Tag</th>
               <th>Image</th>
               <th>Size</th>
               <th>Time</th>
@@ -74,19 +74,19 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="javascript:;">4ads13216d</a></td>
+              <td><a href="javascript:;">v0.0.1</a></td>
               <td>lyy132646</td>
               <td>15691</td>
               <td>2015.5.5</td>
             </tr>
             <tr>
-              <td><a href="javascript:;">4ads13216d</a></td>
+              <td><a href="javascript:;">v0.0.2</a></td>
               <td>lyy132646</td>
               <td>15691</td>
               <td>2015.5.5</td>
             </tr>
             <tr>
-              <td><a href="javascript:;">4ads13216d</a></td>
+              <td><a href="javascript:;">v0.0.3</a></td>
               <td>lyy132646</td>
               <td>15691</td>
               <td>2015.5.5</td>
